fixes image problem where image was overlaping content area.

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -78,6 +78,10 @@ hr.star-primary:after {
 .img-centered {
     margin: 0 auto;
 }
+img {
+    max-height: 100%;
+    max-width: 100%;
+}
 
 header {
     text-align: center;
